--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
     "debug": "~2.6.9",
     "disconnect": "^1.2.2",
     "dotenv": "^16.4.5",
-    "express": "~4.16.1",
+    "express": "4.20.0",
     "express-fileupload": "^1.5.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "mongoose": "^8.7.2",
     "morgan": "~1.9.1",
     "uid2": "^1.0.0",
-    "uniqid": "^5.4.0"
-  }
+    "uniqid": "^5.4.0",
+    "xss-clean": "^0.1.4"
+  },
+  "resolutions": {
+  "send": "0.19.0",
+  "cookie": "0.7.0"
+}
 }
