--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.16",
     "uid2": "^1.0.0",
     "uniqid": "^5.4.0",
     "xss-clean": "^0.1.4"
   },
   "resolutions": {
-  "send": "0.19.0",
-  "cookie": "0.7.0"
-}
+    "send": "0.19.0",
+    "cookie": "0.7.0"
+  }
 }
